# broken-navigator

./: .gitignore  Cargo.toml  LICENSE.md  README.md  internal-planning.md  package-lock.json  package.json
.github/workflows/: publish-to-auto-release.yml
challenges/1/: README.md
challenges/1/src-tauri/: tauri.conf.json
challenges/2/: README.md  package-lock.json
challenges/2/src-tauri/: tauri.conf.json
challenges/space-navigator/: README.md
challenges/space-navigator/1/: .taurignore  INTERNAL.md  README.md  index.html  package-lock.json  package.json
challenges/space-navigator/1/src/: App.css  App.tsx  DirectorySearcher.tsx  PasswordForm.tsx  util.tsx
challenges/space-navigator/1/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
challenges/space-navigator/1/src-tauri/src/: commands.rs  main.rs
challenges/space-navigator/2/: .taurignore  INTERNAL.md  README.md  package.json
challenges/space-navigator/2/navigation/: coordinates.flag
challenges/space-navigator/3/: INTERNAL.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
challenges/space-navigator/4/: INTERNAL.md  README.md  package.json  tsconfig.json
challenges/space-navigator/5/: INTERNAL.md
challenges/space-navigator/6/: INTERNAL.md
challenges/space-navigator/7/: INTERNAL.md
challenges/space-navigator/shared/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
challenges/space-navigator/template/: README.md  package-lock.json  package.json  vite.config.ts
src-tauri/: tauri.conf.json
(+38 files in other folders)
